# esp32-voice-hub

./: .gitignore  README.md  flash.ps1
.github/workflows/: build.yml
assets/icons/: .gitkeep
avatar-poses/: index.html  prompts.json
avatar-poses/announcement/: index.html  prompts.json
avatar-poses/thinking/: index.html  prompts.json
companion-app/: README.md  requirements.txt  voicehub_companion.py
docs/: STABILITY-AUDIT.md  WAKEWORD.md  design.md  hardware-notes.md
enclosure/stl/: .gitkeep  cable_tray.py  cable_tray.stl  desk_hub_v2.stl
firmware/espidf/: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
firmware/espidf/main/: CMakeLists.txt  STREAMING_TODO.md  attention_sound.h  audio.c  audio.h  avatar_images.h  avatar_menu_images.h  bluetooth_hid.c  bluetooth_hid.h  command_server.c  command_server.h  config.c  config.h  display.c  display.h  encoder.c  encoder.h  esp_lcd_sh8601.c  idf_component.yml  lv_conf.h  main.c  notification.c  notification.h  ota_update.c  ota_update.h  ring_buffer.c  ring_buffer.h  touch.c  touch.h  update_checker.c  update_checker.h  voice_client.c  voice_client.h  wakeword.c  wakeword.h  web_server.c  web_server.h  wedge_ui.c  wedge_ui.h  wifi_manager.c  (+1 more)
openclaw-plugin/: README.md  openclaw.plugin.json  package-lock.json  package.json
openclaw-skill/: README.md  SKILL.md  hook-config.json5
reference/: tts_stereo_24k.pcm
test-audio/: salient.pcm
wake-word-service/: Dockerfile  README.md  docker-compose.yml  requirements.txt  server.py  service.py  train.py
(+53 files in other folders)
