idf_component_register(
    SRCS 
        "main.c"
        "config.c"
        "wifi_manager.c"
        "web_server.c"
        "ota_update.c"
        "update_checker.c"
        "display.c"
        "audio.c"
        "esp_lcd_sh8601.c"
        "touch.c"
        "voice_client.c"
        "wakeword.c"
        "wedge_ui.c"
        "bidi_switch_knob.c"
        "encoder.c"
        "ring_buffer.c"
        "notification.c"
        "command_server.c"
    INCLUDE_DIRS "."
    REQUIRES 
        esp_wifi
        esp_http_server
        esp_https_ota
        nvs_flash
        esp_netif
        driver
        esp_lcd
        lvgl
        esp_app_format
        bootloader_support
        esp_partition
        app_update
        esp_timer
        esp_driver_i2s
        esp_websocket_client
        esp-sr
        espressif__cJSON
        esp_http_client
)
